before presentation commit

--- a/instagram_scrapper/src/parser/model_regression.ipynb
+++ b/instagram_scrapper/src/parser/model_regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,33 +85,25 @@
    "source": [
     "input_shape = (224,224,3)\n",
     "batch_size = 32\n",
-    "train_size = 0.2\n",
+    "train_size = 0.9\n",
     "validation_size = 0.05\n",
     "test_size = 0.05"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "train_generator = create_generator(start = 0,stop=train_size,batch_size=batch_size)\n",
-    "validation_generator = create_generator(start = train_size,stop=train_size+validation_size,batch_size=batch_size)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "validation_generator = create_generator(start = train_size,stop=train_size+validation_size,batch_size=batch_size)\n",
     "test_generator = create_generator(start = train_size+validation_size,stop=min(1,train_size+validation_size+test_size),batch_size=batch_size)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -122,37 +114,37 @@
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "conv2d (Conv2D)              (None, 224, 224, 32)      896       \n",
+      "conv2d_6 (Conv2D)            (None, 224, 224, 32)      896       \n",
       "_________________________________________________________________\n",
-      "conv2d_1 (Conv2D)            (None, 222, 222, 32)      9248      \n",
+      "conv2d_7 (Conv2D)            (None, 222, 222, 32)      9248      \n",
       "_________________________________________________________________\n",
-      "max_pooling2d (MaxPooling2D) (None, 111, 111, 32)      0         \n",
+      "max_pooling2d_3 (MaxPooling2 (None, 111, 111, 32)      0         \n",
       "_________________________________________________________________\n",
-      "dropout (Dropout)            (None, 111, 111, 32)      0         \n",
+      "dropout_4 (Dropout)          (None, 111, 111, 32)      0         \n",
       "_________________________________________________________________\n",
-      "conv2d_2 (Conv2D)            (None, 111, 111, 64)      18496     \n",
+      "conv2d_8 (Conv2D)            (None, 111, 111, 64)      18496     \n",
       "_________________________________________________________________\n",
-      "conv2d_3 (Conv2D)            (None, 109, 109, 64)      36928     \n",
+      "conv2d_9 (Conv2D)            (None, 109, 109, 64)      36928     \n",
       "_________________________________________________________________\n",
-      "max_pooling2d_1 (MaxPooling2 (None, 54, 54, 64)        0         \n",
+      "max_pooling2d_4 (MaxPooling2 (None, 54, 54, 64)        0         \n",
       "_________________________________________________________________\n",
-      "dropout_1 (Dropout)          (None, 54, 54, 64)        0         \n",
+      "dropout_5 (Dropout)          (None, 54, 54, 64)        0         \n",
       "_________________________________________________________________\n",
-      "conv2d_4 (Conv2D)            (None, 54, 54, 64)        36928     \n",
+      "conv2d_10 (Conv2D)           (None, 54, 54, 64)        36928     \n",
       "_________________________________________________________________\n",
-      "conv2d_5 (Conv2D)            (None, 52, 52, 64)        36928     \n",
+      "conv2d_11 (Conv2D)           (None, 52, 52, 64)        36928     \n",
       "_________________________________________________________________\n",
-      "max_pooling2d_2 (MaxPooling2 (None, 26, 26, 64)        0         \n",
+      "max_pooling2d_5 (MaxPooling2 (None, 26, 26, 64)        0         \n",
       "_________________________________________________________________\n",
-      "dropout_2 (Dropout)          (None, 26, 26, 64)        0         \n",
+      "dropout_6 (Dropout)          (None, 26, 26, 64)        0         \n",
       "_________________________________________________________________\n",
-      "flatten (Flatten)            (None, 43264)             0         \n",
+      "flatten_1 (Flatten)          (None, 43264)             0         \n",
       "_________________________________________________________________\n",
-      "dense (Dense)                (None, 512)               22151680  \n",
+      "dense_2 (Dense)              (None, 512)               22151680  \n",
       "_________________________________________________________________\n",
-      "dropout_3 (Dropout)          (None, 512)               0         \n",
+      "dropout_7 (Dropout)          (None, 512)               0         \n",
       "_________________________________________________________________\n",
-      "dense_1 (Dense)              (None, 1)                 513       \n",
+      "dense_3 (Dense)              (None, 1)                 513       \n",
       "=================================================================\n",
       "Total params: 22,291,617\n",
       "Trainable params: 22,291,617\n",
@@ -181,16 +173,18 @@
     "model.add(Flatten())\n",
     "model.add(Dense(512, activation='relu'))\n",
     "model.add(Dropout(0.5))\n",
-    "model.add(Dense(1))\n",
+    "model.add(Dense(1, activation='linear'))\n",
     "\n",
     "model.summary()\n",
     "optimizer = Adam()\n",
-    "model.compile(optimizer=optimizer, loss='mse')"
+    "#model.compile(optimizer=optimizer, loss='mse')\n",
+    "#model.compile(loss='mean_squared_logarithmic_error', optimizer=optimizer, metrics=['mse'])\n",
+    "model.compile(loss=\"mean_absolute_percentage_error\", optimizer=optimizer)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,13 +200,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "187/187 [==============================] - 2074s 11s/step - loss: 0.1142 - val_loss: 0.1071\n"
+      "187/187 [==============================] - 1804s 10s/step - loss: 25.9494 - val_loss: 22.8203\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<tensorflow.python.keras.callbacks.History at 0x7f2df59b87f0>"
+       "<tensorflow.python.keras.callbacks.History at 0x7f323561dc50>"
       ]
      },
      "execution_count": 15,
@@ -257,26 +251,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0.9349745 ],\n",
-       "       [0.9381377 ],\n",
-       "       [0.9360941 ],\n",
-       "       ...,\n",
-       "       [0.93140465],\n",
-       "       [0.9275928 ],\n",
-       "       [0.9367203 ]], dtype=float32)"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "test_generator = create_generator(start = train_size+validation_size,stop=min(1,train_size+validation_size+test_size),batch_size=batch_size)\n",
     "Y_pred = model.predict(test_generator,steps = int(NUMBER_OF_PHOTOS*test_size/batch_size))"
@@ -284,170 +261,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1472, 1)"
+       "0.014519346"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Y_pred.shape"
+    "np.std(Y_pred)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Generated X of shape (32, 224, 224, 3) and Y of shape: (32,) from container [\"7\"][500:532] and container [\"8\"][0:0].\n",
-      "Generated X of shape (32, 224, 224, 3) and Y of shape: (32,) from container [\"7\"][532:564] and container [\"8\"][0:0].\n",
-      "Generated X of shape (32, 224, 224, 3) and Y of shape: (32,) from container [\"7\"][564:596] and container [\"8\"][0:0].\n",
-      "Generated X of shape (32, 224, 224, 3) and Y of shape: (32,) from container [\"7\"][596:628] and container [\"8\"][0:0].\n",
-      "Generated X of shape (32, 224, 224, 3) and Y of shape: (32,) from container [\"7\"][628:660] and container [\"8\"][0:0].\n",
-      "Generated X of shape (32, 224, 224, 3) and Y of shape: (32,) from container [\"7\"][660:692] and container [\"8\"][0:0].\n",
-      "Generated X of shape (32, 224, 224, 3) and Y of shape: (32,) from container [\"7\"][692:724] and container [\"8\"][0:0].\n",
-      "Generated X of shape (32, 224, 224, 3) and Y of shape: (32,) from container [\"7\"][724:756] and container [\"8\"][0:0].\n",
-      "Generated X of shape (32, 224, 224, 3) and Y of shape: (32,) from container [\"7\"][756:788] and container [\"8\"][0:0].\n",
-      "Generated X of shape (32, 224, 224, 3) and Y of shape: (32,) from container [\"7\"][788:820] and container [\"8\"][0:0].\n",
-      "Generated X of shape (32, 224, 224, 3) and Y of shape: (32,) from container [\"7\"][820:852] and container [\"8\"][0:0].\n",
-      "Generated X of shape (32, 224, 224, 3) and Y of shape: (32,) from container [\"7\"][852:884] and container [\"8\"][0:0].\n",
-      "Generated X of shape (32, 224, 224, 3) and Y of shape: (32,) from container [\"7\"][884:916] and container [\"8\"][0:0].\n",
-      "Generated X of shape (32, 224, 224, 3) and Y of shape: (32,) from container [\"7\"][916:948] and container [\"8\"][0:0].\n",
-      "Generated X of shape (32, 224, 224, 3) and Y of shape: (32,) from container [\"7\"][948:980] and container [\"8\"][0:0].\n",
-      "Generated X of shape (32, 224, 224, 3) and Y of shape: (32,) from container [\"7\"][980:1000] and container [\"8\"][0:12].\n",
-      "Generated X of shape (32, 224, 224, 3) and Y of shape: (32,) from container [\"8\"][12:44] and container [\"9\"][0:0].\n",
-      "Generated X of shape (32, 224, 224, 3) and Y of shape: (32,) from container [\"8\"][44:76] and container [\"9\"][0:0].\n",
-      "Generated X of shape (32, 224, 224, 3) and Y of shape: (32,) from container [\"8\"][76:108] and container [\"9\"][0:0].\n",
-      "Generated X of shape (32, 224, 224, 3) and Y of shape: (32,) from container [\"8\"][108:140] and container [\"9\"][0:0].\n",
-      "Generated X of shape (32, 224, 224, 3) and Y of shape: (32,) from container [\"8\"][140:172] and container [\"9\"][0:0].\n",
-      "Generated X of shape (32, 224, 224, 3) and Y of shape: (32,) from container [\"8\"][172:204] and container [\"9\"][0:0].\n",
-      "Generated X of shape (32, 224, 224, 3) and Y of shape: (32,) from container [\"8\"][204:236] and container [\"9\"][0:0].\n",
-      "Generated X of shape (32, 224, 224, 3) and Y of shape: (32,) from container [\"8\"][236:268] and container [\"9\"][0:0].\n",
-      "Generated X of shape (32, 224, 224, 3) and Y of shape: (32,) from container [\"8\"][268:300] and container [\"9\"][0:0].\n",
-      "Generated X of shape (32, 224, 224, 3) and Y of shape: (32,) from container [\"8\"][300:332] and container [\"9\"][0:0].\n",
-      "Generated X of shape (32, 224, 224, 3) and Y of shape: (32,) from container [\"8\"][332:364] and container [\"9\"][0:0].\n",
-      "Generated X of shape (32, 224, 224, 3) and Y of shape: (32,) from container [\"8\"][364:396] and container [\"9\"][0:0].\n",
-      "Generated X of shape (32, 224, 224, 3) and Y of shape: (32,) from container [\"8\"][396:428] and container [\"9\"][0:0].\n",
-      "Generated X of shape (32, 224, 224, 3) and Y of shape: (32,) from container [\"8\"][428:460] and container [\"9\"][0:0].\n",
-      "Generated X of shape (32, 224, 224, 3) and Y of shape: (32,) from container [\"8\"][460:492] and container [\"9\"][0:0].\n",
-      "Generated X of shape (32, 224, 224, 3) and Y of shape: (32,) from container [\"8\"][492:524] and container [\"9\"][0:0].\n",
-      "Generated X of shape (32, 224, 224, 3) and Y of shape: (32,) from container [\"8\"][524:556] and container [\"9\"][0:0].\n",
-      "Generated X of shape (32, 224, 224, 3) and Y of shape: (32,) from container [\"8\"][556:588] and container [\"9\"][0:0].\n",
-      "Generated X of shape (32, 224, 224, 3) and Y of shape: (32,) from container [\"8\"][588:620] and container [\"9\"][0:0].\n",
-      "Generated X of shape (32, 224, 224, 3) and Y of shape: (32,) from container [\"8\"][620:652] and container [\"9\"][0:0].\n",
-      "Generated X of shape (32, 224, 224, 3) and Y of shape: (32,) from container [\"8\"][652:684] and container [\"9\"][0:0].\n",
-      "Generated X of shape (32, 224, 224, 3) and Y of shape: (32,) from container [\"8\"][684:716] and container [\"9\"][0:0].\n",
-      "Generated X of shape (32, 224, 224, 3) and Y of shape: (32,) from container [\"8\"][716:748] and container [\"9\"][0:0].\n",
-      "Generated X of shape (32, 224, 224, 3) and Y of shape: (32,) from container [\"8\"][748:780] and container [\"9\"][0:0].\n",
-      "Generated X of shape (32, 224, 224, 3) and Y of shape: (32,) from container [\"8\"][780:812] and container [\"9\"][0:0].\n",
-      "Generated X of shape (32, 224, 224, 3) and Y of shape: (32,) from container [\"8\"][812:844] and container [\"9\"][0:0].\n",
-      "Generated X of shape (32, 224, 224, 3) and Y of shape: (32,) from container [\"8\"][844:876] and container [\"9\"][0:0].\n",
-      "Generated X of shape (32, 224, 224, 3) and Y of shape: (32,) from container [\"8\"][876:908] and container [\"9\"][0:0].\n",
-      "Generated X of shape (32, 224, 224, 3) and Y of shape: (32,) from container [\"8\"][908:940] and container [\"9\"][0:0].\n"
-     ]
-    }
-   ],
-   "source": [
-    "Y = np.ndarray(shape=(0,))\n",
-    "steps = int(NUMBER_OF_PHOTOS*test_size/batch_size)\n",
-    "for x,y in test_generator:\n",
-    "    Y = np.concatenate([Y,y],axis=0)\n",
-    "    steps -= 1\n",
-    "    if steps == 0:\n",
-    "        break"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.92975616"
+       "0.8137807"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Y_pred.mean()"
+    "np.mean(Y_pred)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.006988769"
-      ]
-     },
-     "execution_count": 62,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Y_pred.std()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 63,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1.0277006567896756"
-      ]
-     },
-     "execution_count": 63,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Y.mean()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 65,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.3387483870983686"
-      ]
-     },
-     "execution_count": 65,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Y.std()"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
